# invoicegen

./: .gitignore  CHANGELOG.md  Cargo.toml  NEW_PROJECT.md  README.md  RELEASE.md  justfile
.github/workflows/: release.yml
examples/: 2026-04.yaml  demo.yaml
scripts/: install.sh
src/: cli.rs  config.rs  currency.rs  diagnostics.rs  domain.rs  invoice.rs  invoice_input.rs  lib.rs  locale.rs  main.rs  money.rs  paths.rs  resolve.rs  xdg.rs
src/commands/: docs.rs  generate.rs  init.rs  mod.rs
src/pipeline/: calculate.rs  merge.rs  mod.rs  present.rs
src/render/: mod.rs  world.rs
templates/: invoice-minimal.typ
