[package]
name = "invoice"
version = "0.1.0"
edition = "2024"
authors = [""]
description = ""
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
