[package]
name = "invoicegen"
version = "0.1.2"
edition = "2024"
description = "Render invoices from YAML to PDF using Typst."
readme = "README.md"
license = "MIT"
repository = "https://github.com/raine/invoicegen"
homepage = "https://github.com/raine/invoicegen"
keywords = ["invoice", "yaml", "pdf", "typst", "cli"]
categories = ["command-line-utilities"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE",
    "src/**",
    "templates/**",
    "assets/fonts/**",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
serde_path_to_error = "0.1.20"
anyhow = "1.0"
thiserror = "2.0"
rust_decimal = { version = "1.41", features = ["serde-with-str"] }
jiff = { version = "0.2", features = ["serde"] }
dirs = "6.0"
typst = "0.14.2"
typst-pdf = "0.14.2"
comemo = "0.5"

[dev-dependencies]
rust_decimal_macros = "1.40"
